--- a/lib/alembic.ini
+++ b/lib/alembic.ini
@@ -1,8 +1,13 @@
 # A generic, single database configuration.
 
+
+
 [alembic]
 # path to migration scripts
-script_location = migrations
+script_location = /root/projectphase3/lib/migrations
+
+
+
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
